removed onion shit

--- a/unrealircd/doc/conf/unrealircd.remote.conf
+++ b/unrealircd/doc/conf/unrealircd.remote.conf
@@ -25,13 +25,13 @@ alias os { target operserv; type services; }
 class clients { pingfreq 120; maxclients  100; sendq  25M; recvq 32k; }
 class known   { pingfreq 120; maxclients  250; sendq  50M; recvq 32k; }
 class local   { pingfreq 300; maxclients 1000; sendq  50M; options { nofakelag; } }
-class tor     { pingfreq 300; maxclients  100; sendq  25M; }
+#class tor     { pingfreq 300; maxclients  50;  sendq   1M; }
 class servers { pingfreq 300; maxclients   20; sendq 100M; connfreq 15; }
 
 allow { mask *;                              class clients; maxperip 2;    global-maxperip 2; }
 allow { mask { security-group known-users; } class known;   maxperip 3;    global-maxperip 3; }
 allow { mask { 127.0.0.1;                  } class local;   maxperip 1000; global-maxperip 1000; password "simpsonsfan"; }
-#allow { mask { 127.0.0.2;                 } class tor;    maxperip 100;  global-maxperip 100; }
+#allow { mask { 127.0.0.2;                 }  class tor;     maxperip 100;  global-maxperip 100; }
 
 listen { ip *; port 6667;      options { clientsonly;      } }
 listen { ip *; port 6697;      options { clientsonly; tls; } tls-options { certificate "tls/irc.crt"; key "tls/irc.key"; } }
@@ -259,9 +259,9 @@ security-group known-users {
 	reputation-score 10000;
 }
 
-security-group tor {
-	ip 127.0.0.2;
-}
+#security-group tor {
+#	ip 127.0.0.2;
+#}
 
 set known-users {
 	auto-join "#superbowl";
@@ -273,8 +273,8 @@ set unknown-users {
 	static-part "EMO-PART";
 }
 
-set tor {
-	auto-join "#tor";
-	static-quit "EMO-QUIT";
-	static-part "EMO-PART";
-}
+#set tor {
+#	auto-join "#tor";
+#	static-quit "EMO-QUIT";
+#	static-part "EMO-PART";
+#}
