--- a/unrealircd/doc/conf/badwords.conf
+++ b/unrealircd/doc/conf/badwords.conf
@@ -1,4 +1,3 @@
-badword channel { word "(օ)";        action block;                  }
 badword channel { word "apartment";  replace "flat";                }
 badword channel { word "#arab";      replace "#supernets";          }
 badword channel { word "(banana)";   replace "bogoya";              }
@@ -22,6 +21,10 @@ badword channel { word "drunk";      replace "buck";                }
 badword channel { word "dude";       replace "blud";                }
 badword channel { word "efnet";      replace "efrael";              }
 badword channel { word "elaborate";  replace "ebloggerate";         }
+badword channel { word "endocrine";  replace "retard";              }
+badword channel { word "estradiol";  replace "creatine";            }
+badword channel { word "estrogen";   replace "testosterone";        }
+badword channel { word "estrogel";   replace "baby oil";            }
 badword channel { word "fag";        replace "sodomite";            }
 badword channel { word "faggot";     replace "sodomite";            }
 badword channel { word "femboy";     replace "GUY IRL WHO WILL NEVER BE A GIRL"; }
@@ -49,6 +52,7 @@ badword channel { word "homie";      replace "mate";                }
 badword channel { word "homosexual"; replace "sodomite";            }
 badword channel { word "hooker";     replace "slag";                }
 badword channel { word "house";      replace "flat";                }
+badword channel { word "hrt";        replace "creatine";            }
 badword channel { word "i'm";        replace "m";                   }
 badword channel { word "i am";       replace "m";                   }
 badword channel { word "im";         replace "m";                   }
@@ -57,10 +61,13 @@ badword channel { word "in da";      replace "int";                 }
 badword channel { word "in the";     replace "int";                 }
 badword channel { word "in this";    replace "int";                 }
 badword channel { word "japex";      replace "RAPEX";               }
+badword channel { word "jew";        replace "shusky";              }
+badword channel { word "jewish";     replace "shuskish";            }
 badword channel { word "jfc";        replace "bloody hell";         }
 badword channel { word "jpx";        replace "RAPEX";               }
 badword channel { word "kade";       replace "larry";               }
 badword channel { word "kek";        replace "%%";                  }
+badword channel { word "kike";       replace "shusky";              }
 badword channel { word "labatu";     replace "larry";               }
 badword channel { word "ladies";     replace "bints";               }
 badword channel { word "lady";       replace "bint";                }
