added webirc/webchat support

--- a/unrealircd/doc/conf/unrealircd.remote.conf
+++ b/unrealircd/doc/conf/unrealircd.remote.conf
@@ -42,6 +42,11 @@ listen { ip *; port REDACTED;  options { serversonly; tls; } }
 
 #require authentication { mask { *@127.0.0.2; } reason "$VOID"; }
 
+webirc {
+	mask 205.185.121.23;
+	password "supernets_underground_collective_2022"
+}
+
 deny channel { channel "#help";     reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
 deny channel { channel "#pumpcoin"; reason "This channel has moved to #exchange";  redirect "#exchange";  }
 
@@ -259,6 +264,10 @@ security-group known-users {
 	reputation-score 10000;
 }
 
+security-group webchat {
+	webirc yes;
+}
+
 #security-group tor {
 #	ip 127.0.0.2;
 #}
@@ -269,6 +278,12 @@ set known-users {
 
 set unknown-users {
 	auto-join "#blackhole";
+	static-quit "EMO-QUIT";
+	static-part "EMO-PART";
+}
+
+set webchat {
+	auto-join "#superbowl";
 	static-quit "EMO-QUIT";
 	static-part "EMO-PART";
 }
