--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 # SuperNETS UnrealIRCd - Developed by acidvegas (https://github.com/supernets/unrealircd)
 # unrealircd/.env.example
 
-REMOTE_INCLUDE_URL="https://hub.supernets.org:5000"
+REMOTE_INCLUDE="https://hub.supernets.org:5000"
 SERVER_NAME="wildwest"
-S2S_PORT="5000"
-SSH_PUBKEY="ssh-ed25519 changeme change@me.com"
+SID="0AB"
