--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # SuperNETS UnrealIRCd - Developed by acidvegas (https://github.com/supernets/unrealircd)
 # unrealircd/.gitignore
 
+assets/conf/tls/*
+assets/conf/unrealircd.conf
+assets/data/*
+assets/logs/*
 .env
