--- a/unrealircd/Config
+++ b/unrealircd/Config
@@ -269,7 +269,7 @@ done
 c=""
 n=""
 UNREALCWD="`pwd`"
-BASEPATH="/opt/ircd"
+BASEPATH="/opt/unrealircd"
 DEFPERM="0600"
 SSLDIR=""
 NICKNAMEHISTORYLENGTH="100"
@@ -278,7 +278,7 @@ REMOTEINC="1"
 CURLDIR=""
 NOOPEROVERRIDE=""
 OPEROVERRIDEVERIFY=""
-GENCERTIFICATE="1"
+GENCERTIFICATE="0"
 EXTRAPARA=""
 SANITIZER=""
 GEOIP="classic"
