--- a/unrealircd/doc/conf/modules.conf
+++ b/unrealircd/doc/conf/modules.conf
@@ -114,8 +114,8 @@ loadmodule "svssno";
 loadmodule "svswatch";
 
 // Channel Modes
-loadmodule "chanmodes/chanowner";      /* +q */
-loadmodule "chanmodes/chanadmin";      /* +a */
+#loadmodule "chanmodes/chanowner";      /* +q */
+#loadmodule "chanmodes/chanadmin";      /* +a */
 loadmodule "chanmodes/chanop";         /* +o */
 loadmodule "chanmodes/halfop";         /* +h */
 loadmodule "chanmodes/voice";          /* +v */
@@ -204,8 +204,10 @@ loadmodule "typing-indicator";
 // RPC
 #loadmodule "rpc/channel";
 #loadmodule "rpc/log";
+#loadmodule "rpc/message";
 #loadmodule "rpc/name_ban";
 #loadmodule "rpc/rpc";
+#loadmodule "rpc/security_group";
 #loadmodule "rpc/server";
 #loadmodule "rpc/server_ban";
 #loadmodule "rpc/server_ban_exception";
@@ -224,18 +226,21 @@ loadmodule "channeldb";
 loadmodule "charsys";
 loadmodule "connect-flood";
 loadmodule "connthrottle";
+loadmodule "crule";
 #loadmodule "extjwt";
-#loadmodule "geoip_base";
-#loadmodule "geoip_classic";
-#loadmodule "geoip-tag";
+loadmodule "geoip_base";
+loadmodule "geoip_classic";
+loadmodule "geoip-tag";
 loadmodule "hideserver";
 loadmodule "history_backend_mem";
 #loadmodule "history_backend_null";
 loadmodule "ident_lookup";
 loadmodule "issued-by-tag";
+#loadmodule "isupport";
 loadmodule "jointhrottle";
 loadmodule "json-log-tag";
 loadmodule "max-unknown-connections-per-ip";
+#loadmodule "portinfo";
 loadmodule "real-quit-reason";
 loadmodule "targetfloodprot";
 loadmodule "tkldb";
@@ -244,13 +249,25 @@ loadmodule "tls_cipher";
 loadmodule "userhost-tag";
 loadmodule "userip-tag";
 loadmodule "utf8functions";
+#loadmodule "utf8only";
 loadmodule "reputation";
 loadmodule "restrict-commands";
 loadmodule "rmtkl";
+#loadmodule "spamreport";
 loadmodule "watch-backend";
-#loadmodule "webirc";
+loadmodule "webirc";
 #loadmodule "webredir";
-#loadmodule "webserver";
-#loadmodule "websocket";
-#loadmodule "websocket_common";
-loadmodule "crule";
+loadmodule "webserver";
+loadmodule "websocket";
+loadmodule "websocket_common";
+
+@if module-loaded("geoip_classic")
+set {
+	geoip-classic {
+		ipv4-database     "https://www.unrealircd.org/files/geo/classic/GeoIP.dat"        { url-refresh 30d; url-fail warn; }
+		ipv6-database     "https://www.unrealircd.org/files/geo/classic/GeoIPv6.dat"      { url-refresh 30d; url-fail warn; }
+		asn-ipv4-database "https://www.unrealircd.org/files/geo/classic/GeoIPASNum.dat"   { url-refresh 30d; url-fail warn; }
+		asn-ipv6-database "https://www.unrealircd.org/files/geo/classic/GeoIPASNumv6.dat" { url-refresh 30d; url-fail warn; }
+	}
+}
+@endif
