--- a/unrealircd/doc/conf/unrealircd.remote.conf
+++ b/unrealircd/doc/conf/unrealircd.remote.conf
@@ -25,20 +25,15 @@ alias os { target operserv; type services; }
 class clients { pingfreq 120; maxclients  100; sendq  25M; recvq 32k; }
 class known   { pingfreq 120; maxclients  250; sendq  50M; recvq 32k; }
 class local   { pingfreq 300; maxclients 1000; sendq  50M; options { nofakelag; } }
-#class tor     { pingfreq 300; maxclients  50;  sendq   1M; }
 class servers { pingfreq 300; maxclients   20; sendq 100M; connfreq 15; }
 
 allow { mask *;                              class clients; maxperip 2;    global-maxperip 2; }
 allow { mask { security-group known-users; } class known;   maxperip 3;    global-maxperip 3; }
 allow { mask { 127.0.0.1;                  } class local;   maxperip 1000; global-maxperip 1000; password "simpsonsfan"; }
-#allow { mask { 127.0.0.2;                 }  class tor;     maxperip 100;  global-maxperip 100; }
 
 listen { ip *; port 6667;      options { clientsonly;      } }
 listen { ip *; port 6697;      options { clientsonly; tls; } tls-options { certificate "tls/irc.crt"; key "tls/irc.key"; } }
 listen { ip *; port REDACTED;  options { serversonly; tls; } }
-
-#listen { file "/etc/tor/unrealircd/tor_ircd.socket";     mode 0777; spoof-ip 127.0.0.2; }
-#listen { file "/etc/tor/unrealircd/tor_tls_ircd.socket"; mode 0777; spoof-ip 127.0.0.2; options { tls; } }
 
 #require authentication { mask { *@127.0.0.2; } reason "$VOID"; }
 
@@ -49,6 +44,7 @@ webirc {
 
 deny channel { channel "#help";     reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
 deny channel { channel "#pumpcoin"; reason "This channel has moved to #exchange";  redirect "#exchange";  }
+deny channel { channel "#tor";      reason "This channel has moved to #superbowl"; redirect "#superbowl"; }
 
 link irc.supernets.org {
 	incoming { mask REDACTED; }
@@ -131,6 +127,7 @@ set {
 	}
 	oper-auto-join "#syslog";
 	who-limit 1;
+	maxbans 200;
 	nick-length 20;
 	maxchannelsperuser 10;
 	channel-command-prefix "`!@$.";
@@ -165,7 +162,7 @@ set {
 	}
 	anti-flood {
 		channel {
-			profile defcon { flood-mode "[10j#R5,500m#M5,10n#N5,10k#K5]:15"; }
+			profile defcon { flood-mode "[20j#R5,10n#N5,100m#M5]:5"; }
 			boot-delay 75;
 			split-delay 75;
 		}
@@ -237,14 +234,11 @@ set {
 		}
 	}
 	manual-ban-target ip;
-	hide-idle-time { policy always; }
+	hide-idle-time { policy usermode; }
 	whois-details {
-		bot         { everyone none; self full; oper full; } 
-		channels    { everyone none; self full; oper full; }
+		channels    { everyone none; self none; oper full; }
 		oper        { everyone none; self full; oper full; } 
-		reputation  { everyone full; self full; oper full; }
-		server      { everyone none; self full; oper full; }
-		swhois      { everyone full; self full; oper full; }
+		server      { everyone none; self none; oper full; }
 	}
 	blacklist {
         recheck-time-first 2m;
