--- a/assets/.env.example
+++ b/assets/.env.example
@@ -1,4 +1,4 @@
-# SuperNETS UnrealIRCd - Developed by acidvegas (https://github.com/supernets/unrealircd)
+# SuperNETS UnrealIRCd - Developed by acidvegas (https://git.supernets.org/supernets/unrealircd)
 # unrealircd/.env.example
 
 REMOTE_INCLUDE="https://hub.supernets.org:5000"
