--- a/assets/ansible/inventory.example.ini
+++ b/assets/ansible/inventory.example.ini
@@ -1,5 +1,5 @@
-# SuperNETs UnrealIRCd Ansible - Developed by acidvegas (https://git.supernets.org/supernets/unrealircd)
-# unrealircd/ansible/inventory.example.ini
+# SuperNETS UnrealIRCd - Developed by acidvegas (https://git.supernets.org/supernets/unrealircd)
+# unrealircd/assets/ansible/inventory.example.ini
 
 [leafs]
 bulbasaur  ansible_host=1.2.3.4    ansible_port=22 sid=0AB
