--- a/assets/ansible/deploy.yml
+++ b/assets/ansible/deploy.yml
@@ -1,9 +1,6 @@
 ---
-# SuperNETs UnrealIRCd Ansible Playbook - Developed by acidvegas (https://github.com/supernets/unrealircd)
-#
-# Usage:
-#   Deploy all:  ansible-playbook -i inventory.ini deploy.yml
-#   Deploy one:  ansible-playbook -i inventory.ini deploy.yml --limit bulbasaur
+# SuperNETS UnrealIRCd - Developed by acidvegas (https://git.supernets.org/supernets/unrealircd)
+# unrealircd/assets/ansible/deploy.yml
 
 - name: Deploy UnrealIRCd
   hosts: leafs
