--- a/src/doc/conf/snomasks.conf
+++ b/src/doc/conf/snomasks.conf
@@ -64,3 +64,17 @@ log {
 	}
 	destination { remote; }
 }
+
+
+log {
+	source {
+		all;
+		!debug;
+	}
+	destination {
+		channel "#syslog-json" {
+			json-message-tag yes;
+			oper-only yes;
+		}
+	}
+}
