--- a/src/doc/conf/unrealircd.remote.conf
+++ b/src/doc/conf/unrealircd.remote.conf
@@ -68,7 +68,12 @@ log {
 	destination { channel "#syslog"; }
 }
 
-tld { mask *@*; motd remote.motd; rules remote.motd; options { remote; } }
+tld {
+	mask *@*;
+	motd remote.motd;
+	rules remote.motd;
+	options { remote; }
+}
 
 ulines { services.supernets.org; }
 
@@ -262,10 +267,6 @@ security-group webchat {
 	webirc yes;
 }
 
-#security-group tor {
-#	ip 127.0.0.2;
-#}
-
 set known-users {
 	auto-join "#superbowl";
 }
@@ -281,9 +282,3 @@ set webchat {
 	static-quit "EMO-QUIT";
 	static-part "EMO-PART";
 }
-
-#set tor {
-#	auto-join "#tor";
-#	static-quit "EMO-QUIT";
-#	static-part "EMO-PART";
-#}
