--- a/assets/ansible/deploy.yml
+++ b/assets/ansible/deploy.yml
@@ -87,6 +87,10 @@
     - name: Download MOTD art
       shell: wget -O /etc/motd https://raw.githubusercontent.com/acidvegas/void/master/local/share/art/supernets.txt
 
+    # --- Unattended Upgrades ---
+    - name: Enable unattended upgrades
+      shell: echo 'APT::Periodic::Update-Package-Lists "1";' > /etc/apt/apt.conf.d/20auto-upgrades && echo 'APT::Periodic::Unattended-Upgrade "1";' >> /etc/apt/apt.conf.d/20auto-upgrades
+
     # --- Install Docker ---
     - name: Install dependencies
       apt:
