--- a/assets/ansible/inventory.example.ini
+++ b/assets/ansible/inventory.example.ini
@@ -1,11 +1,14 @@
 # SuperNETS UnrealIRCd - Developed by acidvegas (https://git.supernets.org/supernets/unrealircd)
 # unrealircd/assets/ansible/inventory.example.ini
 
+[hub]
+hub ansible_host=127.0.0.1 ansible_port=22 sid=001
+
 [leafs]
 bulbasaur  ansible_host=1.2.3.4    ansible_port=22 sid=0AB
 charmander ansible_host=5.6.7.8    ansible_port=22 sid=1CD
 squirtle   ansible_host=9.10.11.12 ansible_port=22 sid=2EF
 
-[leafs:vars]
+[all:vars]
 ansible_user=root
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
