--- a/src/doc/conf/modules.conf
+++ b/src/doc/conf/modules.conf
@@ -256,7 +256,7 @@ loadmodule "rmtkl";
 #loadmodule "spamreport";
 loadmodule "watch-backend";
 loadmodule "webirc";
-#loadmodule "webredir";
+loadmodule "webredir";
 loadmodule "webserver";
 loadmodule "websocket";
 loadmodule "websocket_common";
