--- a/src/doc/conf/unrealircd.remote.conf
+++ b/src/doc/conf/unrealircd.remote.conf
@@ -249,6 +249,7 @@ set {
         recheck-time-first 2m;
         recheck-time 15m;
     }
+	webredir { url "https://webchat.supernets.org"; }
 }
 
 hideserver {
